dark mode fix

--- a/diwiseweb/src/components/FeatureCard/featurecard.css
+++ b/diwiseweb/src/components/FeatureCard/featurecard.css
@@ -8,13 +8,23 @@
     padding: 5px;
     margin: 8px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;     
+    transition: 0.3s;
 }
 
 .presence-on {
-    background-color:coral;
+    background-color: coral;
 }
 
 .card-container {
     padding: 2px 16px;
+}
+
+.darkTheme div[class*="featureCard"] {
+    background: #282828;
+    color: #ffffff;
+}
+
+.lightTheme div[class*="featureCard"] {
+    background: #ffffff;
+    color: #000000;
 }
